# PortfolioImportTool

./: .gitignore  README.md  pyproject.toml
configs/: convert.example.yaml  pipeline.example.yaml
docs/: MAINTENANCE.md
docs/superpowers/plans/: 2026-06-29-pit-foundation.md  2026-06-30-pit-converter-backend.md  2026-06-30-pit-excel-workbook.md  2026-06-30-pit-importer-backend.md  2026-07-01-pit-executables.md  2026-07-01-pit-runner-scripts.md
docs/superpowers/specs/: 2026-06-29-portfolio-import-tool-design.md
excel/: PortfolioImportTool.bas  build_workbook.py
pit/: __init__.py
pit/converter/: cli.py  pipeline.py  summary.py
pit/converter/processors/: agency_mbs.py  convert_to_rics.py  granular.py  portfolio.py  registry.py  update_import_files.py  userdata.py
pit/importer/: bho.py  cli.py  pipeline.py  read_rics_files.py  sg_api.py
pit/shared/: config.py  logging_setup.py  results.py
scripts/: compare_outputs.py  run_import.py  run_pipeline.py
tests/: test_smoke.py
tests/converter/: test_cli.py  test_convert_to_rics_pure.py  test_golden_equivalence.py  test_pipeline.py  test_registry.py  test_summary.py
tests/excel/: test_workbook_yaml.py
tests/golden_master/: README.md  capture_converter.py  compare.py  test_compare.py  test_tree_hash.py  tree_hash.py
tests/importer/: fakes.py  make_rics_files.py  test_cli.py  test_logic.py  test_pipeline.py  test_pure_modules.py  test_run_integration.py  test_sg_api.py
tests/scripts/: test_run_import.py  test_run_pipeline.py
tests/shared/: test_config.py  test_logging_setup.py  test_results.py
