[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pit"
version = "0.1.0"
description = "Portfolio Import Tool — convert client data to RICS files and import into Moody's SG"
requires-python = ">=3.11"
# pandas pinned <3: the converter relies on pandas 2.x groupby().apply()
# key-inclusion semantics (removed in pandas 3.0). The original tool was
# developed on pandas 2.3.x. Modernizing to pandas 3 is a future task,
# guarded by the golden-master equivalence test.
# pythonnet is required by the Import stage (loads the Moody's SG .NET API).
# The Convert stage does not need it. Windows + a .NET runtime required at run time.
dependencies = ["pyyaml>=6.0", "pandas>=2.2,<3", "openpyxl>=3.1", "pythonnet>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pyinstaller>=6.0"]

[project.scripts]
pit-convert = "pit.converter.cli:main"
pit-import = "pit.importer.cli:main"

[tool.setuptools.packages.find]
include = ["pit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
